{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 131,
  "lineage": "3a6b5fb6-5f0d-56e4-0f66-1e62a7dab967",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc0a7d8db70b5cf0",
            "arn": "arn:aws:ec2:ap-south-1:905418014070:instance/i-02d2c197da60211f0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d2c197da60211f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webapp-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fad7fa09e8b89e89",
            "private_dns": "ip-10-10-0-161.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.161",
            "public_dns": "ec2-13-234-48-160.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.48.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e64363aa1ccc10c6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c84155b685eeddd7",
            "tags": {
              "Name": "Webapp-EC2"
            },
            "tags_all": {
              "Name": "Webapp-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c83c6a6c5e62407"
            ]
          },
          "dependencies": [
            "aws_key_pair.webapp-keypair",
            "aws_security_group.allow_80_22",
            "aws_subnet.webapp-subnet-1a",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-ec2-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc0a7d8db70b5cf0",
            "arn": "arn:aws:ec2:ap-south-1:905418014070:instance/i-0d4d8ec92a0f0b908",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4d8ec92a0f0b908",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webapp-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fde2bf110d81db32",
            "private_dns": "ip-10-10-1-71.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.71",
            "public_dns": "ec2-13-233-98-214.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.98.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a6300cebecf73091",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff11e149c0fdfdb7",
            "tags": {
              "Name": "Webapp-EC2"
            },
            "tags_all": {
              "Name": "Webapp-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c83c6a6c5e62407"
            ]
          },
          "dependencies": [
            "aws_key_pair.webapp-keypair",
            "aws_security_group.allow_80_22",
            "aws_subnet.webapp-subnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webapp-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:internet-gateway/igw-0a71515b62b0a11fd",
            "id": "igw-0a71515b62b0a11fd",
            "owner_id": "905418014070",
            "tags": {
              "Name": "webapp-IGW"
            },
            "tags_all": {
              "Name": "webapp-IGW"
            },
            "vpc_id": "vpc-0c549b1bc0f991a10"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webapp-LB-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:loadbalancer/app/Webapp-LB-2/89993848fa52fc4e",
            "arn_suffix": "app/Webapp-LB-2/89993848fa52fc4e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Webapp-LB-2-2114662082.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:loadbalancer/app/Webapp-LB-2/89993848fa52fc4e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Webapp-LB-2",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02c83c6a6c5e62407"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c84155b685eeddd7"
              },
              {
                "subnet_id": "subnet-0ff11e149c0fdfdb7"
              }
            ],
            "subnets": [
              "subnet-0c84155b685eeddd7",
              "subnet-0ff11e149c0fdfdb7"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0c549b1bc0f991a10",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow_80_22",
            "aws_subnet.webapp-subnet-1a",
            "aws_subnet.webapp-subnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp-listener-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:listener/app/Webapp-LB-2/89993848fa52fc4e/f4bfb58dec11329e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:targetgroup/webapp-lb-tg-2/143c5174ab9ca7b5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:listener/app/Webapp-LB-2/89993848fa52fc4e/f4bfb58dec11329e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:loadbalancer/app/Webapp-LB-2/89993848fa52fc4e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webapp-LB-2",
            "aws_lb_target_group.webapp-TG-2",
            "aws_security_group.allow_80_22",
            "aws_subnet.webapp-subnet-1a",
            "aws_subnet.webapp-subnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp-TG-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:targetgroup/webapp-lb-tg-2/143c5174ab9ca7b5",
            "arn_suffix": "targetgroup/webapp-lb-tg-2/143c5174ab9ca7b5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:targetgroup/webapp-lb-tg-2/143c5174ab9ca7b5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:905418014070:loadbalancer/app/Webapp-LB-2/89993848fa52fc4e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webapp-lb-tg-2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c549b1bc0f991a10"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webapp-private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:route-table/rtb-015e9255b9774a9fc",
            "id": "rtb-015e9255b9774a9fc",
            "owner_id": "905418014070",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Webapp-Private-RT"
            },
            "tags_all": {
              "Name": "Webapp-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c549b1bc0f991a10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webapp-public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:route-table/rtb-0651685593c5faccc",
            "id": "rtb-0651685593c5faccc",
            "owner_id": "905418014070",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a71515b62b0a11fd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Webapp-Public-RT"
            },
            "tags_all": {
              "Name": "Webapp-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c549b1bc0f991a10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.webapp-IGW",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-RT-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f547839db624166",
            "route_table_id": "rtb-015e9255b9774a9fc",
            "subnet_id": "subnet-087d6dfed46bcf43d"
          },
          "dependencies": [
            "aws_route_table.webapp-private-RT",
            "aws_subnet.webapp-subnet-1c",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-RT-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053e0b0b73fccf951",
            "route_table_id": "rtb-0651685593c5faccc",
            "subnet_id": "subnet-0c84155b685eeddd7"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-IGW",
            "aws_route_table.webapp-public-RT",
            "aws_subnet.webapp-subnet-1a",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-RT-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058a6247277a8ea92",
            "route_table_id": "rtb-0651685593c5faccc",
            "subnet_id": "subnet-0ff11e149c0fdfdb7"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-IGW",
            "aws_route_table.webapp-public-RT",
            "aws_subnet.webapp-subnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_80_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:security-group/sg-02c83c6a6c5e62407",
            "description": "Allow 80 and 22 inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c83c6a6c5e62407",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_80_22",
            "name_prefix": "",
            "owner_id": "905418014070",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_80_22"
            },
            "tags_all": {
              "Name": "allow_80_22"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c549b1bc0f991a10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:subnet/subnet-0c84155b685eeddd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c84155b685eeddd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418014070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Webapp-subnet-1a"
            },
            "tags_all": {
              "Name": "Webapp-subnet-1a"
            },
            "vpc_id": "vpc-0c549b1bc0f991a10"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:subnet/subnet-0ff11e149c0fdfdb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff11e149c0fdfdb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418014070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Webapp-subnet-1b"
            },
            "tags_all": {
              "Name": "Webapp-subnet-1b"
            },
            "vpc_id": "vpc-0c549b1bc0f991a10"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:subnet/subnet-087d6dfed46bcf43d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087d6dfed46bcf43d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418014070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Webapp-subnet-1c"
            },
            "tags_all": {
              "Name": "Webapp-subnet-1c"
            },
            "vpc_id": "vpc-0c549b1bc0f991a10"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:vpc/vpc-0c549b1bc0f991a10",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0408c89323a49e222",
            "default_route_table_id": "rtb-09a677b130a2b1c51",
            "default_security_group_id": "sg-0df69f44cbbdf6f8e",
            "dhcp_options_id": "dopt-05d129e7f1e0fc150",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c549b1bc0f991a10",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a677b130a2b1c51",
            "owner_id": "905418014070",
            "tags": {
              "Name": "Webapp-VPC"
            },
            "tags_all": {
              "Name": "Webapp-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:security-group-rule/sgr-0d34ac2506a05047c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d34ac2506a05047c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02c83c6a6c5e62407",
            "security_group_rule_id": "sgr-0d34ac2506a05047c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_80_22",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:security-group-rule/sgr-014474e5ed7d4552f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-014474e5ed7d4552f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02c83c6a6c5e62407",
            "security_group_rule_id": "sgr-014474e5ed7d4552f",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_80_22",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:security-group-rule/sgr-0c18b6622adecc3f2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0c18b6622adecc3f2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02c83c6a6c5e62407",
            "security_group_rule_id": "sgr-0c18b6622adecc3f2",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_80_22",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    }
  ]
}